--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,4 +1,5 @@
 name: documentation
+run-name: Update static documentation
 on: [push, pull_request, workflow_dispatch]
 permissions:
     contents: write
@@ -8,9 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
       - name: install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install sphinx
       - name: sphinx build
         run: |
