--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,6 +16,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install sphinx
+          pip install pipenv
+          pipenv install --dev --system --deploy
       - name: sphinx build
         run: |
           sphinx-build docs _build
