--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,6 +24,8 @@ jobs:
           pip install sphinx
           pip install pipenv
           pipenv install --dev --system --deploy
+          mkdir /etc/locales
+          cp locales/* /etc/locales
       - name: sphinx build
         run: |
           sphinx-build docs _build
