secret key added to converty config

--- a/source/config/converty_config.ini
+++ b/source/config/converty_config.ini
@@ -4,3 +4,6 @@ Host = db
 Port = 5432
 User = postgres
 Password = thoh7eTh
+
+[Converty]
+SecretToken = 6076012909:AAEyomAuTcsaD6B5z6wavk-U72cM_Kd1vdQ
