smtp server connection added

--- a/source/config/converty_config.ini
+++ b/source/config/converty_config.ini
@@ -5,5 +5,11 @@ Port = 5432
 User = postgres
 Password = thoh7eTh
 
+[Smtp]
+Host = smtp.gmail.com
+Port = 587
+Login = converty.bot@gmail.com
+PasswordReadFrom = .mail_password
+
 [Converty]
 SecretToken = 6076012909:AAEyomAuTcsaD6B5z6wavk-U72cM_Kd1vdQ
