--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -27,9 +27,7 @@ jobs:
           pip install sphinx
           pip install pipenv
           pipenv install --dev --system --deploy
-          pybabel compile -D converty -d locales -l ru
-          pybabel compile -D converty -d locales -l en
-          pybabel compile -D converty -d locales -l fr
+          pybabel compile -D converty -d locales
       - name: sphinx build
         run: |
           sphinx-build docs _build
