--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -22,5 +22,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8
       - name: flake8 code style check
-        run: flake8 .
+        run: flake8 source
 
